--- a/web/welcomePrimefaces.xhtml
+++ b/web/welcomePrimefaces.xhtml
@@ -36,7 +36,7 @@
 
                 <p:layoutUnit position="center">
                     <h:form>  
-                        <ui:include src="documentosIdentidad.xhtml" />  
+                        <ui:include src="usuarios.xhtml" />  
                     </h:form>
                 </p:layoutUnit>
 
