El estado del proyecto es estable, ya el proyecto maneja las imagenes en sus botones, lo que falta es lo siguiente: 1. Documentacion del Codigo. 2. Me esta manteniendo el valor de los valores que modifico en la cache.

--- a/web/usuarios.xhtml
+++ b/web/usuarios.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>Usuarios</title>
-        <link rel="stylesheet" href="resource/css/estilos.css"/>    
+        <link rel="stylesheet" href="resources/css/estilos.css"/>    
     </h:head>
     <h:body>
         <h:form id="idFrmBtnNuevoUsuario" style="text-align: center">
