--- a/web/welcomePrimefaces.xhtml
+++ b/web/welcomePrimefaces.xhtml
@@ -9,7 +9,7 @@
         <h:head>
             <f:facet name="first">
                 <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
-                <link rel="stylesheet" href="resource/css/estilos.css"/>
+                <link rel="stylesheet" href="resources/css/estilos.css"/>
                 <title>Documentos de Identidad</title>
             </f:facet>
         </h:head>
