--- a/web/Paises.xhtml
+++ b/web/Paises.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>Paises</title>
-        <link rel="stylesheet" href="resource/css/estilos.css"/>    
+        <link rel="stylesheet" href="resources/css/estilos.css"/>    
     </h:head>
     <h:body>
         <h:form id="idFrmBtnNuevoPais" style="text-align: center">
