--- a/web/usuarios_1.xhtml
+++ b/web/usuarios_1.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>Usuarios</title>
-        <link rel="stylesheet" href="resource/css/estilos.css"/>    
+        <link rel="stylesheet" href="resources/css/estilos.css"/>    
     </h:head>
     <h:body>
         <h:form id="idFrmBtnNuevoUsuario" style="text-align: center">
