el estado del proyecto es estable,  los espectos faltantes por realizar son: 1. Aplicar Tecnologia JAVADOC, para la documentacion del Proyecto. 2. Se quiere hacer una migracion a JPA (EclipseLink), para verificar. 3. Aplicar Clases<T> Genericas para los Dao. 4.Corregir lo de la cache, Esperando que con EclipseLink lo de la cache se mejore.
VISION:
Los grid para listar las entidades permitan filtrar pero sin mostrar el campo de texto de filtro, que el usuario en un lupa al dar click se despliegue el campo de filtrado.

--- a/web/vistaPaises.xhtml
+++ b/web/vistaPaises.xhtml
@@ -49,7 +49,7 @@
                         <p:dataTable var="pais" onExpandStart="#{paisesBean.paises}" value="#{paisesBean.paises}" emptyMessage="No Pais." paginator="true" rows="15"  
                              paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
                              rowsPerPageTemplate="5,10,15" paginatorPosition="bottom">  
-                            <p:column headerText="ID" filterBy="#{pais.id}">  
+                            <p:column headerText="ID">  
                                 <h:outputText value="#{pais.id}" />  
                             </p:column>  
                             <p:column headerText="Nombre">  
