--- a/web/vistaUsuarios.xhtml
+++ b/web/vistaUsuarios.xhtml
@@ -50,7 +50,7 @@
                             <p:column headerText="Identificación">  
                                 <h:outputText value="#{usuario.referenciaIdentificacion}" />  
                             </p:column>  
-                            <p:column headerText="Nombre" filterBy="#{usuario.nombre}">  
+                            <p:column headerText="Nombre">  
                                 <h:outputText value="#{usuario.nombre}" />  
                             </p:column>  
                             <p:column headerText="Apellido">  
